# Quasi-1D-Euler-Nozzle

./: .gitignore  CMakeLists.txt  README.md  REAME.md  main.cpp
scripts/: GifCreation.py  Validation.py
src/: Cellule.cpp  Cellule.h  Domaine.cpp  Domaine.h  NumericalSchemes.cpp  NumericalSchemes.h  StateVector.h
